Add "Output:" label when code has example output

--- a/content/static/html/doc/example.tmpl
+++ b/content/static/html/doc/example.tmpl
@@ -16,6 +16,7 @@
       <p>Code:</p>{{"\n" -}}
       {{render_code .Example}}{{"\n" -}}
       {{- if (or .Output .EmptyOutput) -}}
+        <p>Output:</p>{{"\n" -}}
         <pre class="Documentation-exampleOutput">{{"\n"}}{{.Output}}</pre>{{"\n" -}}
       {{- end -}}
     </div>{{"\n" -}}
